propfuzz/tests/compile-fail/no-args.stderr
error: #[propfuzz] requires at least one argument
  --> $DIR/no-args.rs:10:1
   |
10 | fn no_args() {}
   | ^^^^^^^^^^^^
